Pdl (#128)
* endring av datastruktur

* refaktorering

* refaktorering

* fjerne 2 avhengigheter som ikke brukes

* fikse slik at riktig format av sbom blir lastet opp så vi kan plukke ut sårbarheter i dependencies

* fikse riktig policy på nytt navn (utbetalingsportalen)

* fikse logback filen for unødvendige deprecated warnings

* rette på hardkodet årstall, gjort om til mer generisk og fikset på tester

* liten endring på hvilken import for contenttype som skal brukes

* fjerner ekstra lag med objekt når man får respons

* Støtte for PDL, tror dette er det som trengs

* legger til pdl klient for å hente ut navn

* gjøre koden mer funksjonelt

* legger til å hente ut PDL env variabler for lokal kjøring

* legger til å kunne hente ut navn for person knyttet skattekort

* fikse på refaktorering

* revert

* oppdatert branch som funker mot pdl

* lagt til navn i swagger

* endrer logback.xml for å fikse layout encoder = null issue

* nedgraderer logback version for å sjekke om feilmeldingen i logback oppstår

* følger eksemplet til naudit repo

* oppdterer logback lib version

* legge på hvilken encoder som brukes så lettere å lese

* fjerner linje for å verifisere at x-correlation-id er tom eller ikke, undøvendig

* endre beskrivelse tekster på swagger kontrakt
