# src/main/resources/openapi/sokos-skattekort-person-v1-swagger.yaml
@@ -19,11 +19,11 @@ paths:
       tags:
         - skattekort
       summary: Hente skattekort for person
-      description: Kun tilgjengelige inntektsår er gjeldende år +/- 1 år
+      description: Returnerer skattekort for person
       operationId: hentSkattekortPerson
 
       requestBody:
-        description: SkattekortPersonRequest
+        description: fnr og inntektsaar er påkrevd. Inntektåret må være gjeldende år +/- 1 år
         content:
           application/json:
             schema:
@@ -36,7 +36,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SkattekortPersonResponse'
+                type: array
+                items:
+                  $ref: '#/components/schemas/SkattekortTilArbeidsgiver'
         400:
           description: Ugyldig request, oppfyller ikke swagger-kontrakt
           content:
@@ -73,17 +75,11 @@ components:
           example: "2023"
           description: Skattekort for gjeldende år +/- 1 år
 
-    SkattekortPersonResponse:
-      type: object
-      properties:
-        skattekortListe:
-          type: array
-          items:
-            $ref: '#/components/schemas/SkattekortTilArbeidsgiver'
-
     SkattekortTilArbeidsgiver:
       type: object
       properties:
+        navn:
+          type: string
         arbeidsgiver:
           type: array
           items:
